--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,14 +70,14 @@ html, body {
 }
 
 .section {
-    padding: 70px 0;
+    padding: 30px 0;
 }
 
 .title-1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    margin-bottom: 60px;
-    font-size: 60px;
+    margin-bottom: 30px;
+    font-size: 50px;
     line-height: 1.5;
     color: var(--title-1);
     text-align: center;
@@ -86,7 +86,7 @@ html, body {
 .title-2 {
     margin-bottom: 40px;
     font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
+    font-size: 40px;
     line-height: 1.2;
     font-weight: 700;
     color: var(--title-2);
@@ -200,15 +200,16 @@ html, body {
 /*Button-outline*/
 .button-outline {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     height: 100px;
     width: 350px;
-    padding: 20px 20px;
+    padding: 20px 10px;
     border: 3px solid var(--accent);
     color: var(--accent);
     border-radius: 20px;
-    font-size: 40px;
-    font-family: 'Caveat', cursive;
+    font-size: 35px;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     transition: opacity 0.2s ease-in;
 }
@@ -232,6 +233,7 @@ html, body {
     column-gap: 30px;
     row-gap: 30px;
     justify-content: center;
+    margin-bottom: 100px;
 }
 
 .project {
@@ -271,7 +273,7 @@ html, body {
 
 .project-details__cover {
     max-width: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     box-shadow: 0 5px 35px rgba(0, 0, 0, 0.7);
     border-radius: 20px;
 }
@@ -404,11 +406,11 @@ html, body {
 
     /*General*/
     .section {
-        padding: 40px;
+        padding: 20px;
     }
 
     .title-1 {
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         font-size: 30px;
     }
 
@@ -436,7 +438,7 @@ html, body {
         height: 50px;
         width: 200px;
         padding: 10px 10px;
-        font-size: 20px;
+        font-size: 15px;
         font-weight: 700;
     }
 
